# Auto_Excel_PDF_Email

./: .gitignore  README.md  pyproject.toml
designer/: interface.ui
src/: email_utils.py  excel_utils.py  historico.py  interface.py  main.py  main_window.py  pdf_utils.py
