[project]
name = "rpa-excel-pdf-email"
version = "0.1.0"
description = "Automação com o fluxo: Excel - PDF - Email"
authors = [
    {name = "PedroRBrito", email = "pedrorocha1654@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = ">=2.2.3,<3.0.0"
reportlab = ">=4.4.1,<5.0.0"
openpyxl = ">=3.1.5,<4.0.0"
pyside2 = ">=5.15.2.1,<6.0.0.0"
numpy = ">=1.24.0,<2.0.0"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
